# plugin-ini-editor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  index.css  skills.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: logo.psd
src/components/: ArgbPicker.jsx  Sidebar.jsx  Toggle.jsx
src/components/sections/: AoeColor.jsx  AoeTime.jsx  CellColors.jsx  ClientSection.jsx  CommandStatus.jsx  FontSection.jsx  GlobalConfigs.jsx  ImagesSection.jsx  TurboHotkeys.jsx
