[package]
name = "plugin-ini-editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-open", "dialog-save", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
